fixed appending of multiple fetch, overflow of the todo text and padding

--- a/index.css
+++ b/index.css
@@ -66,7 +66,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column-reverse;
-    margin-top: 40px;
+    margin-top: 32px;
     padding: 0;
 }
 
@@ -76,11 +76,17 @@ body {
     width: 350px;
     justify-content: space-between;
     align-items: center;
-    height: 48px;
+    min-height: 48px;
     padding: 0px 16px;
     margin: 4px 0px;
     background-color: rgba(243, 186, 194, 1);
     border-radius: 7px;
+}
+.statement{
+    padding: 4px 6px;
+    margin: 0;
+    line-height: 1.3;
+    
 }
 
 .delete-todo-icon {
@@ -94,6 +100,8 @@ body {
     justify-content: center;
     flex-direction: column;
 }
+
+
 
 @media only screen and (max-width: 600px) {
 
